Fix line wrapping in Actions Menu

--- a/assets/css/civicrm-admin-utilities-admin.css
+++ b/assets/css/civicrm-admin-utilities-admin.css
@@ -1522,9 +1522,10 @@ div.crm-container .crm-content label.error
 
 #crm-container .ac_results li {
 	float: none;
-	padding: 8px 0 8px 8px;
+	padding: 0;
 	margin: 0;
 	line-height: 15px;
+	white-space: initial;
 }
 
 #crm-container #crm-contact-actions-list .crm-contact_activities-list ul,
@@ -3263,6 +3264,7 @@ tbody.scrollContent tr.alternateRow {
 {
 	color: #333;
 	text-decoration: none;
+	padding: 8px;
 }
 
 .ac_results li strong {
